# rocket_insilicoPCR

./: Cargo.toml  README.md  Rocket.toml  example.fasta  rpoB_primer.txt
assets/: app.js  index.html  w.css
src/: lib.rs  main.rs  paste_id.rs
upload/: 9CrA  CURx  MWbq  XLvp
